# Football-Online

./: .gitignore  README.md  render.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  pom.xml  test.js
backend/src/main/java/com/example/football/: FootballApplication.java
backend/src/main/java/com/example/football/client/: FootballDataClient.java  TheSportsDbClient.java
backend/src/main/java/com/example/football/config/: DataInitializer.java  DatabaseSchemaFixer.java  GlobalExceptionHandler.java  SecurityConfig.java
backend/src/main/resources/: ai_stars.json  application-dev.properties  application-prod.properties  application.properties
backend/src/test/java/com/example/football/: CrawlerTest.java
chatbot/: Dockerfile  pyproject.toml
chatbot/src/: prompts.py  server.py  tools.py
chatbot/src/agent/: graph.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AiAssistant.jsx  InteractiveMatch.jsx  MatchSimulationModal.jsx  PlayerCard.jsx  PrivateRoute.jsx  SeasonSummaryModal.jsx  StandingsTable.jsx  TopUpModal.jsx  TournamentBracket.jsx  TournamentLeaders.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/data/: matchScenarios.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  LoginSuccess.jsx  Market.jsx  Packs.jsx  Quests.jsx  SoloMatch.jsx  Squad.jsx  TournamentHub.jsx  Tournaments.jsx  Trophies.jsx  Upgrade.jsx
frontend/src/services/: api.js
frontend/src/styles/: AiAssistant.css  MatchSimulation.css  globals.css
(+81 files in other folders)
